chore: change relation order between producer and farm
